New relative ref for navigation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,8 +32,8 @@
 			<div id="navbar">
 				<nav>
 					<ul>
-						<li><a href="/">Home</a></li>
-						<li><a href="/blog">Blog</a></li>
+						<li><a href="/NewcastleCL.github.io/">Home</a></li>
+						<li><a href="/NewcastleCL.github.io/blog">Blog</a></li>
 					</ul>
 				</nav>
 			</div>
